# oz_assignment

DATABASE/day_1/: chapter01_06.ipynb
DATABASE/day_2/: chapter07_13.ipynb  database 2일차 필수과제.sql  챗팅.html
DATABASE/day_3/: database 3일차 필수과제.sql
DATABASE/day_4/: database 4일차 필수과제.sql
Django/day_2/: .gitignore  db.sqlite3  manage.py  pyproject.toml
Django/day_2/day_2/: asgi.py  settings.py  urls.py  wsgi.py
Django/day_2/templates/: base.html  pagination.html  root.html  todo_detail.html  todo_list.html  todo_update.html
Django/day_2/templates/auth/: signup_done.html  signup_fail.html  signup_pending.html
Django/day_2/templates/comment/: comment_update.html
Django/day_2/templates/js/: form_delete.html
Django/day_2/templates/registration/: login.html  signup.html
Django/day_2/templates/todo/: todo_create.html  todo_detail.html  todo_form.html  todo_list.html
Django/day_2/todo/: admin.py  cb_urls.py  cb_views.py  forms.py  models.py  urls.py  views.py
Django/day_2/todo/migrations/: 0001_initial.py  0002_todo_author_alter_todo_end_date_and_more.py  0003_comment.py  0004_alter_comment_user.py  0005_todo_completed_image_todo_thumbnail.py
Django/day_2/users/: forms.py  models.py  urls.py  views.py
Django/day_2/users/migrations/: 0001_initial.py
Django/day_2/utls/: email.py
FLASK/day_2/: Users:.fileloc
HTML/day_1/: MyProfile.html  survey.html
HTML/day_2/: MyProfile.html  css.css
HTML/day_3/: member.html  project2.html
PYTHON/day_1/: Ch04_task.ipynb  level2.ipynb  level3.ipynb
PYTHON/day_2/: Ch05_task.ipynb  Chapter0508_과제.ipynb  (+2 more)
(+49 files in other folders)
